# football_score_predictor

./: .gitignore  FEATURE_ENGINEERING_ANALYSIS.md  PROJECT_DOCUMENTATION.md  README.md  app.py  calibration_trends.py  check_outcomes.py  check_policy_safety.py  config.py  debug_concentration.py  evaluate_reproducible.py  features.py  metrics.py  monitor_imputation.py  predict.py  predict_helpers.py  probability_utils.py  pyproject.toml  requirements.txt  rl_env.py  rl_eval.py  rl_policy_utils.py  rl_train.py  run_backtest.py  run_streamlit.py  streamlit.toml  sweep_max_goals.py  test_imports.py  train.py
data/: stadium_coordinates.csv  stadium_coordinates_completed_full.csv  stadium_coordinates_master_from_template_populated.csv  stadium_coordinates_template_populated.csv  stadium_coordinates_template_populated_audit.csv
models/: low_score_calibration_log.csv  rl_policy.joblib  score_models.joblib
reports/: low_score_bias.json  rl_sweep.csv  rl_sweep.json  rl_sweep_deep.csv  rl_sweep_deep.json  rl_vs_rule_summary.json
scripts/: check_imputation_thresholds.py  check_low_score_bias.py  check_rl_policy_safety.py  compare_rl_vs_rule.py  dump_config.py  ev_diagnostic.py  low_score_analysis.py  plot_compare_rl_vs_rule.py  rl_sweep.py
tests/: __init__.py  test_check_imputation_thresholds.py  test_concentration_shrinker.py  test_low_score_features.py  test_monitor_imputation.py  test_predict_preprocessing.py  test_rl_env.py  test_rl_eval_smoke.py  test_rl_policy_safety.py  test_rl_train_smoke.py  test_scientific_checks.py  test_streamlit_basic.py  test_streamlit_init.py
(+8 files in other folders)
