[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-score-predictor"
version = "0.1.0"
description = "Football exact scoreline prediction and optional RL policy tooling"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 120
